--- a/3_1_speciesID.Rmd
+++ b/3_1_speciesID.Rmd
@@ -15,8 +15,8 @@ library(readxl)
 #with a project this should no longer be necessary
 
 ##Import Baseline and Mixture files
-mixture <- read_excel("JSOES_2024_May_Genotypes.xlsx", sheet = "SpID176")
-baseline <- read.csv("SpID_Baseline_176loci_RubiasInput.csv")
+mixture <- read_excel("input_files/JSOES_2024_May_Genotypes.xlsx", sheet = "SpID176")
+baseline <- read.csv("baseline/SpID_Baseline_176loci_RubiasInput.csv")
 
 # Convert all columns to characters
 mixture[] <- lapply(mixture, as.character)
@@ -50,8 +50,8 @@ Top2 <- rep_indiv_est %>% top_n(2, rep_pofz)
 Top1 <- rep_indiv_est %>% top_n(1, rep_pofz)
 
 ## Write table
-write.csv(Top2, file = "Top2.csv")
-write.csv(Top1, file = "Top1.csv")
+write.csv(Top2, file = "output/speciesID_Top2.csv")
+write.csv(Top1, file = "output/speciesID_Top1.csv")
 
 ## To obtain z-scores for top pop for each individual
 map_rows <- mix_est$indiv_posteriors %>% group_by(indiv) %>% top_n(1, PofZ) %>% ungroup()
@@ -61,7 +61,7 @@ map_rows_df <- as.data.frame(map_rows)
 
 # Save the data frame to a CSV file (have to exclude the column that is still a list)
 write.csv(subset(map_rows_df, select = c("mixture_collection", "indiv", "repunit", "collection", "PofZ", "log_likelihood", "z_score", "n_non_miss_loci")), 
-          file = 'z-scores.csv', row.names = FALSE)
+          file = 'output/speciesID_z-scores.csv', row.names = FALSE)
 
 unique(rep_mix_est$repunit)
 ```
