--- a/4_reporting.Rmd
+++ b/4_reporting.Rmd
@@ -11,11 +11,11 @@ library(readxl)
 library(tidyverse)
 
 #import all the files made
-spID <- read.csv("output/speciesID_Top1.csv")
-crAssignment <- read.csv("output/Indiv_Assignments_Columbia.csv")
-northAssignement <- read.csv("output/Indiv_Assignments_North.csv")
-southAssignement <- read.csv("output/Indiv_Assignments_South.csv")
-snppit_Parentage <- read_delim("output/snppit_output_ParentageAssignments.txt", delim = "\t", escape_double = FALSE, trim_ws = TRUE)
+spID <- read.csv("output/2024/speciesID_Top1.csv")
+crAssignment <- read.csv("output/2024/Indiv_Assignments_Columbia.csv")
+northAssignement <- read.csv("output/2024/Indiv_Assignments_North.csv")
+southAssignement <- read.csv("output/2024/Indiv_Assignments_South.csv")
+snppit_Parentage <- read_delim("output/2024/snppit_output_ParentageAssignments.txt", delim = "\t", escape_double = FALSE, trim_ws = TRUE)
 genos <- read_excel("input_files/JSOES_2024_May_Genotypes.xlsx", sheet = "Ots334")
 ```
 
@@ -171,7 +171,7 @@ south_final_df <- south_merge[, c("SampleID", "SalmonID", "species","Genotypic s
 
 
 
-put it all together and now for pbt
+put it all togetherand now for pbt
 ```{r}
 df5 <- rbind(CR_final_df,north_final_df,south_final_df)
 
@@ -187,7 +187,7 @@ df6 <- right_join(df5,filtered_snppit_Parentage,by="SampleID", keep = F)[,  c("S
 
 df7 <- as.data.frame(df6, stringsAsFactors = FALSE)
 
-write.csv(df7, file = "output/JSOES_Genetic_Stock_Assignments_For_Database_pop_info.csv", row.names = FALSE)
+write.csv(df7, file = "output/2024/2024_JSOES_Genetic_Stock_Assignments_For_Database_pop_info.csv", row.names = FALSE)
 ```
 
 swap out for the JSOES genetic stock group abbreviation
@@ -215,6 +215,6 @@ for (i in 1:nrow(find_replace_pairs)) {
   })
 }
 
-write.csv(df7, file = "output/JSOES_Genetic_Stock_Assignments_For_Database_stock_group.csv", row.names = FALSE)
+write.csv(df7, file = "output/2024/2024_JSOES_Genetic_Stock_Assignments_For_Database_stock_group.csv", row.names = FALSE)
 ```
 
